# llm-pet

./: .gitignore  agent.py  main.py  pyproject.toml  window.py
framework/: agent.py  config.py  event.py  plugin.py  window.py  worker.py
plugins/base/: plugin.py
plugins/base/expression_adapter/: plugin.py
plugins/base_chat/: plugin.py
plugins/base_expression/: expression_field.md  plugin.py
plugins/base_pet/expression_adapter/: config.yaml  plugin.py
plugins/chat_input/: plugin.py
plugins/core/: plugin.py
plugins/desktop_pet/: pet.py
plugins/desktop_pet/base_pet/: plugin.py
plugins/desktop_pet/charactors/: c1_by_ds.md  plugin.py
plugins/desktop_pet/chat_bubble/: plugin.py
plugins/desktop_pet/chat_input/: plugin.py
plugins/desktop_pet/drag/: plugin.py
plugins/desktop_pet/expression/: expression_marker.md  plugin.py
plugins/desktop_pet/greeting/: plugin.py
plugins/drag/: config.yaml  plugin.py
plugins/dummy_tool/: plugin.py
plugins/environment_info/: plugin.py
plugins/expression/: plugin.py
plugins/idle_action/: plugin.py
plugins/live2d_pet/: config.yaml  plugin.py
plugins/move/: plugin.py
plugins/pet_state/: mood_field.md  plugin.py
plugins/rand_init_pos/: plugin.py
plugins/speak/: plugin.py  speak_field.md
plugins/template/: plugin.py
plugins/text_bubble/: plugin.py
plugins/think/: config.yaml  plugin.py  think_field.md  think_field_force.md
plugins/tool_call/: plugin.py  tools_field.md
plugins/tools/web/: plugin.py
prompts/zh-CN/: decide_model.md  default_slots.json  instruction.md  messages.json  template.md
(+16 files in other folders)
