[project]
name = "small-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "BaoZ1", email = "2078223902@qq.com" }
]
requires-python = ">=3.12"
dependencies = [
    "langchain-openai>=0.3.31",
    "langgraph>=0.6.6",
    "live2d-py>=0.5.4",
    "numpy>=2.3.3",
    "pillow>=11.3.0",
    "pyopengl>=3.1.10",
    "pyside6>=6.9.2",
    "requests>=2.32.5",
    "tavily-python>=0.7.12",
]


